alignment fix

--- a/views/main.sass
+++ b/views/main.sass
@@ -357,6 +357,8 @@ $imgw: 180px
     p.title
       max-width: $imgw
       margin-bottom: 10px
+      height: 53px
+      overflow: hidden
       .name
         font-size: 1.3em
         font-weight: bold
